--- a/src/main/resources/templates/conversor.html
+++ b/src/main/resources/templates/conversor.html
@@ -19,168 +19,147 @@
 </head>
 
 <body class="">
-  <div class="wrapper ">
-    <div class="sidebar" data-color="orange">
+<div class="wrapper ">
+  <div class="sidebar" data-color="orange">
 
-      <div class="logo">
-        <a class="simple-text logo-mini">
-          FT
-        </a>
-        <a class="simple-text logo-normal">
-          FORTUNE
-        </a>
-      </div>
-      <div class="sidebar-wrapper" id="sidebar-wrapper">
-        <ul class="nav">
-          <li>
-            <a href="./receita">
-              <i class="now-ui-icons business_money-coins"></i>
-              <p>Receita</p>
-            </a>
-          </li>
-          <li>
-            <a href="./investimento">
-              <i class="now-ui-icons business_briefcase-24"></i>
-              <p>Investimento</p>
-            </a>
-          </li>
-          <li>
-            <a href="./despesa">
-              <i class="now-ui-icons shopping_basket"></i>
-              <p>Despesa</p>
-            </a>
-          </li>
-          <li class="active">
-            <a href="./conversor">
-              <i class="now-ui-icons arrows-1_refresh-69"></i>
-              <p>Conversor Monetário</p>
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/perfis}">
-              <i class="now-ui-icons users_single-02"></i>
-              <p>Perfis</p>
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/relatorio}">
-              <i class="now-ui-icons files_paper"></i>
-              <p>Relatório</p>
-            </a>
-          </li>
-          <li class="active-pro">
-            <a th:href="@{/logout}">
-              <i class="now-ui-icons arrows-1_minimal-left"></i>
-              <p>Sair</p>
-            </a>
-          </li>
-        </ul>
-      </div>
+    <div class="logo">
+      <a class="simple-text logo-mini">
+        FT
+      </a>
+      <a class="simple-text logo-normal">
+        FORTUNE
+      </a>
     </div>
-    <div class="main-panel" id="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
+    <div class="sidebar-wrapper" id="sidebar-wrapper">
+      <ul class="nav">
+        <li>
+          <a href="./receita">
+            <i class="now-ui-icons business_money-coins"></i>
+            <p>Receita</p>
+          </a>
+        </li>
+        <li>
+          <a href="./investimento">
+            <i class="now-ui-icons business_briefcase-24"></i>
+            <p>Investimento</p>
+          </a>
+        </li>
+        <li>
+          <a href="./despesa">
+            <i class="now-ui-icons shopping_basket"></i>
+            <p>Despesa</p>
+          </a>
+        </li>
+        <li class="active">
+          <a href="./conversor">
+            <i class="now-ui-icons arrows-1_refresh-69"></i>
+            <p>Conversor Monetário</p>
+          </a>
+        </li>
+        <li>
+          <a th:href="@{/perfis}">
+            <i class="now-ui-icons users_single-02"></i>
+            <p>Perfis</p>
+          </a>
+        </li>
+        <li>
+          <a th:href="@{/relatorio}">
+            <i class="now-ui-icons files_paper"></i>
+            <p>Relatório</p>
+          </a>
+        </li>
+        <li class="active-pro">
+          <a th:href="@{/logout}">
+            <i class="now-ui-icons arrows-1_minimal-left"></i>
+            <p>Sair</p>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="main-panel" id="main-panel">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
+      <div class="container-fluid">
+        <div class="navbar-wrapper">
+          <div class="navbar-toggle">
+            <button type="button" class="navbar-toggler">
+              <span class="navbar-toggler-bar bar1"></span>
+              <span class="navbar-toggler-bar bar2"></span>
+              <span class="navbar-toggler-bar bar3"></span>
+            </button>
+          </div>
+          <a class="navbar-brand">Conversor Monetário</a>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
+    <div class="panel-header panel-header-sm">
+    </div>
+    <div class="content">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card ">
+            <div class="card-header ">
+              Converter
             </div>
-            <a class="navbar-brand">Conversor Monetário</a>
+            <div class="card-body ">
+              <form th:action="@{/conversor}" th:object="${conversor}" method="get">
+                <div class="row">
+                  <div class="col-md-3 px-3">
+                    <div class="form-group">
+                      <label>Valor</label>
+                      <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" required>
+                    </div>
+                  </div>
+                  <div class="col-md-3 px-3">
+                    <div class="form-group">
+                      <label>Tipo Moeda</label>
+                      <select class="form-control" placeholder="Moeda" name="moedaPrimaria" required>
+                        <option value="">Selecione</option>
+                        <!--                          <option value="REAL">REAL</option>-->
+                        <option value="EURO">EURO</option>
+                        <option value="DOLAR">DÓLAR</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-md-2 px-3 px-3 mt-3 ml-auto">
+                    <div class="form-group">
+                      <button type="submit" class="btn btn-primary form-control design_app">Converter</button>
+                    </div>
+                  </div>
+                  <div class="col-md-2 px-3 mt-3 ml-auto">
+                    <div class="form-group">
+                      <button type="reset" class="btn btn-secondary form-control design_app" value="Limpar">Limpar</button>
+                    </div>
+                  </div>
+                  <div class="col-md-2 px-3 mt-3 ml-auto">
+                    <div class="form-group">
+                      <a th:href="@{/despesa}" class="btn btn-secondary form-control design_app" value="Voltar" style="background-color: #003e7e; color: white">Voltar</a>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
-      </nav>
-      <!-- End Navbar -->
-      <div class="panel-header panel-header-sm">
-      </div>
-      <div class="content">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card ">
-              <div class="card-header ">
-                Converter
-              </div>
-              <div class="card-body ">
-                <form th:action="@{/conversor}" th:object="${conversor}" method="get">
-                  <div class="row">
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria" required>
-                          <option value="">Selecione</option>
-<!--                          <option value="REAL">REAL</option>-->
-                          <option value="EURO">EURO</option>
-                          <option value="DOLAR">DÓLAR</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Valor</label>
-                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" required>
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria"  disabled>
-                          <option value="">Selecione</option>
-<!--                          <option value="REAL">REAL</option>-->
-                          <option value="EURO">EURO</option>
-                          <option value="DOLAR">DÓLAR</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Valor</label>
-                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" disabled>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-2 px-3 ml-auto">
-                      <div class="form-group">
-                        <button type="submit" class="btn btn-primary form-control design_app">Converter</button>
-                      </div>
-                    </div>
-                    <div class="col-md-2 px-3">
-                      <div class="form-group">
-                        <button type="reset" class="btn btn-secondary form-control design_app" value="Limpar">Limpar</button>
-                      </div>
-                    </div>
-                    <div class="col-md-2 px-3">
-                      <div class="form-group">
-                        <a th:href="@{/despesa}" class="btn btn-secondary form-control design_app" value="Voltar" style="background-color: #003e7e; color: white">Voltar</a>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
+
+
+        <div class="col-md-12" th:if="${conversor != null}">
+          <div class="card ">
+            <div class="card-header ">
+              Conversão <span th:utext="${conversor.nome}"></span>
             </div>
-          </div>
-
-
-            <div class="col-md-12" th:if="${conversor != null}">
-              <div class="card ">
-                <div class="card-header ">
-                  Conversão <span th:utext="${conversor.nome}"></span>
+            <div class="card-body">
+              <div class="row text-center">
+                <div class="col-md-4">
+                  <h5>Valor de Entrada: R$ <span th:utext="${conversor.valorPrimario}"></span></h5>
                 </div>
-                <div class="card-body">
-                  <div class="row text-center">
-                    <div class="col-md-4">
-                      <h5>Valor de Entrada: R$ <span th:utext="${conversor.valorPrimario}"></span></h5>
-                    </div>
-                    <div class="col-md-4">
-                      <h5>Valor Convertido: <span th:utext="${conversor.valorConvertidoFormatado}"></span></h5>
-                    </div>
-                    <div class="col-md-4">
-                      <h5>Sigla: <span th:utext="${conversor.sigla}"></span></h5>
-                    </div>
-                  </div>
+                <div class="col-md-4">
+                  <h5>Valor Convertido: <span th:utext="${conversor.valorConvertidoFormatado}"></span></h5>
+                </div>
+                <div class="col-md-4">
+                  <h5>Sigla: <span th:utext="${conversor.sigla}"></span></h5>
                 </div>
               </div>
             </div>
@@ -189,15 +168,17 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
-  <!--   Core JS Files   -->
-  <script th:src="@{/assets/js/core/jquery.min.js}"></script>
-  <script th:src="@{/assets/js/core/popper.min.js}"></script>
-  <script th:src="@{/assets/js/core/bootstrap.min.js}"></script>
-  <script th:src="@{/assets/js/plugins/perfect-scrollbar.jquery.min.js}"></script>
-  <script th:src="@{/assets/js/plugins//bootstrap-notify.js}"></script>
-  <script th:src="@{/assets//demo/demo.js}"></script>
-  <script th:src="@{assets/js/now-ui-dashboard.js?v=1.0.1}"></script>
-  <script th:src="@{assets/demo/demo.js}"></script>
+<!--   Core JS Files   -->
+<script th:src="@{/assets/js/core/jquery.min.js}"></script>
+<script th:src="@{/assets/js/core/popper.min.js}"></script>
+<script th:src="@{/assets/js/core/bootstrap.min.js}"></script>
+<script th:src="@{/assets/js/plugins/perfect-scrollbar.jquery.min.js}"></script>
+<script th:src="@{/assets/js/plugins//bootstrap-notify.js}"></script>
+<script th:src="@{/assets//demo/demo.js}"></script>
+<script th:src="@{assets/js/now-ui-dashboard.js?v=1.0.1}"></script>
+<script th:src="@{assets/demo/demo.js}"></script>
 </body>
 </html>
