--- a/src/main/resources/templates/updateusuario.html
+++ b/src/main/resources/templates/updateusuario.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+>
 
 <head>
   <meta charset="utf-8" />
@@ -109,17 +109,19 @@
                 Editar dados de <span th:text="${perfil.nome}"></span>
               </div>
               <div class="card-body ">
-                  <form th:action="@{/update/{codigo}(codigo=${perfil.codigo})}" th:object="${perfil}" method="post">
-                    <div class="row">
-                      <div class="col-md-6 px-3">
-                        <div class="form-group">
-                          <label>Nome</label>
-                          <input type="text" class="form-control" placeholder="Nome" name="nome" th:value="${perfil.nome}" required>
-                        </div>
-                      </div>
-                      <div class="col-md-6 px-3">
-                        <div class="form-group">
-                          <label>Email</label>
+                  <form th:action="@{/home-perfil/update-perfil/{codigo}(codigo=${perfil.codigo})}"
+                        th:object="${perfil}" method="post">
+                      <div class="row">
+                          <div class="col-md-6 px-3">
+                              <div class="form-group">
+                                  <label>Nome</label>
+                                  <input type="text" class="form-control" placeholder="Nome" name="nome"
+                                         th:value="${perfil.nome}" required>
+                              </div>
+                          </div>
+                          <div class="col-md-6 px-3">
+                              <div class="form-group">
+                                  <label>Email</label>
                           <input type="email" class="form-control" placeholder="Email" name="email" th:value="${perfil.email}" required>
                         </div>
                       </div>
