--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -115,61 +115,61 @@
         <div class="row">
 
 
-          <div class="col-lg-3">
-            <div class="card card-chart">
-              <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
-                <h4 class="card-title">Fixas</h4>
-              </div>
-              <div class="card-body">
-                <h5>R$ <span th:text="${despesas.totalFixas}"></span></h5>
-                <p>US$ <span th:text="${0}"></span></p>
-                <p>€ <span th:text="${0}"></span></p>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col-lg-3">-->
+<!--            <div class="card card-chart">-->
+<!--              <div class="card-header">-->
+<!--                <h5 class="card-category">Despesas</h5>-->
+<!--                <h4 class="card-title">Fixas</h4>-->
+<!--              </div>-->
+<!--              <div class="card-body">-->
+<!--                <h5>R$ <span th:text="${despesas.totalFixas}"></span></h5>-->
+<!--                <p>US$ <span th:text="${0}"></span></p>-->
+<!--                <p>€ <span th:text="${0}"></span></p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
-          <div class="col-lg-3">
-            <div class="card card-chart">
-              <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
-                <h4 class="card-title">Variáveis</h4>
-              </div>
-              <div class="card-body">
-                <h5>R$ <span th:text="${despesas.totalVariaveis}"></span></h5>
-                <p>US$ <span th:text="${0}"></span></p>
-                <p>€ <span th:text="${0}"></span></p>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col-lg-3">-->
+<!--            <div class="card card-chart">-->
+<!--              <div class="card-header">-->
+<!--                <h5 class="card-category">Despesas</h5>-->
+<!--                <h4 class="card-title">Variáveis</h4>-->
+<!--              </div>-->
+<!--              <div class="card-body">-->
+<!--                <h5>R$ <span th:text="${despesas.totalVariaveis}"></span></h5>-->
+<!--                <p>US$ <span th:text="${0}"></span></p>-->
+<!--                <p>€ <span th:text="${0}"></span></p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
-          <div class="col-lg-3">
-            <div class="card card-chart">
-              <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
-                <h4 class="card-title">Extraordinárias</h4>
-              </div>
-              <div class="card-body">
-                <h5>R$ <span th:text="${despesas.totalExtraordinarias}"></span></h5>
-                <p>US$ <span th:text="${0}"></span></p>
-                <p>€ <span th:text="${0}"></span></p>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col-lg-3">-->
+<!--            <div class="card card-chart">-->
+<!--              <div class="card-header">-->
+<!--                <h5 class="card-category">Despesas</h5>-->
+<!--                <h4 class="card-title">Extraordinárias</h4>-->
+<!--              </div>-->
+<!--              <div class="card-body">-->
+<!--                <h5>R$ <span th:text="${despesas.totalExtraordinarias}"></span></h5>-->
+<!--                <p>US$ <span th:text="${0}"></span></p>-->
+<!--                <p>€ <span th:text="${0}"></span></p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
-          <div class="col-lg-3">
-            <div class="card card-chart">
-              <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
-                <h4 class="card-title">Regulares</h4>
-              </div>
-              <div class="card-body">
-                <h5>R$ <span th:text="${despesas.totalRegulares}"></span></h5>
-                <p>US$ <span th:text="${0}"></span></p>
-                <p>€ <span th:text="${0}"></span></p>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col-lg-3">-->
+<!--            <div class="card card-chart">-->
+<!--              <div class="card-header">-->
+<!--                <h5 class="card-category">Despesas</h5>-->
+<!--                <h4 class="card-title">Regulares</h4>-->
+<!--              </div>-->
+<!--              <div class="card-body">-->
+<!--                <h5>R$ <span th:text="${despesas.totalRegulares}"></span></h5>-->
+<!--                <p>US$ <span th:text="${0}"></span></p>-->
+<!--                <p>€ <span th:text="${0}"></span></p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
 
           <div class="col-md-12">
